# boston-circular-economy

./: .gitignore  CONTRIBUTING.md  package-lock.json  package.json
.github/workflows/: deploy.yml
client/: README.md  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
client/src/pages/: __root.tsx  index.tsx
client/src/pages/dev/: index.tsx  prototype-example.tsx
client/src/pages/dev/fuzzy-search/: fuzzy-search.module.css  index.tsx
data-collectors/: README.md  base_normalizer.py  base_querier.py  data_transfer_objects.py  ingester.py  pyproject.toml  run.py
data-explorations/google-places/samples/: README.md  appliance-repair-00.json  appliance-repair-00.sh  donations-00.json  donations-00.sh  electronics-repair-00.json  electronics-repair-00.sh  repair-shops-00.json  repair-shops-00.sh  shoe-repair-00.json  shoe-repair-00.sh
data-explorations/openstreetmap/: README.md
data-explorations/openstreetmap/samples/: broad-search-00.json  broad-search.sh  repair-00.json  repair-00.sh  sources.json  transform-broad-search.py
data-explorations/web-scraper/: boston_web_scrape.py  requirements.txt
etl/: README.md  dtos.py  json_ingester.py  pyproject.toml
etl/base/: ingester.py  normalizer.py  querier.py
etl/pipelines/example/: normalizer.py  querier.py  test_pipeline.py
etl/pipelines/google_places/: __init__.py  common.py  normalizer.py  querier.py  test_pipeline.py
server/: eslint.config.js  package.json  tsconfig.json
server/src/: index.ts
server/src/db/: index.ts
(+4 files in other folders)
